--- a/src/components/accordian/styles.css
+++ b/src/components/accordian/styles.css
@@ -1,4 +1,4 @@
-.wrapper {
+/* .wrapper {
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -40,4 +40,4 @@
   font-weight: 900;
   font-size: 20px;
   cursor: pointer;
-}
+} */
