--- a/src/components/image-slider/styles.css
+++ b/src/components/image-slider/styles.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   position: relative;
   width: 600px;
   height: 450px;
@@ -55,4 +55,4 @@
 
 .inactive-indicator {
   background-color: rgb(184, 182, 182);
-}
+} */
