--- a/src/components/star-rating/styles.css
+++ b/src/components/star-rating/styles.css
@@ -1,4 +1,4 @@
-.star-rating {
+/* .star-rating {
   margin-top: 2rem;
   display: flex;
   justify-content: center;
@@ -12,4 +12,4 @@
 
 .inactive {
   color: #000000;
-}
+} */
