--- a/src/index.css
+++ b/src/index.css
@@ -66,16 +66,20 @@ h6 {
   text-wrap: balance;
 }
 
+/* Remove default list styles */
+ul,
+ol {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
 /*
   10. Create a root stacking context
 */
 #root,
 #__next {
   isolation: isolate;
-}
-
-ul {
-  list-style: none;
 }
 
 body {
