qr code generator

--- a/src/components/recursive-navigation-menu/styles.css
+++ b/src/components/recursive-navigation-menu/styles.css
@@ -1,4 +1,4 @@
-.tree-view-container {
+/* .tree-view-container {
   min-height: 100vh;
   width: 24rem;
 
@@ -17,4 +17,4 @@
   color: #fff;
   font-size: 1.25rem;
   font-weight: 700;
-}
+} */
