--- a/src/components/theme-switch/theme.css
+++ b/src/components/theme-switch/theme.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --background: #fff;
   --text-prmary: #000;
   --button-bg: #000;
@@ -40,4 +40,4 @@
   border-radius: 0.5rem;
   font-size: 1.25rem;
   font-weight: bold;
-}
+} */
