--- a/src/components/scroll-indicator/scroll.css
+++ b/src/components/scroll-indicator/scroll.css
@@ -1,4 +1,4 @@
-.scroll-indicator {
+/* .scroll-indicator {
   height: 0.5rem;
   width: calc(100% - 6rem);
   border-radius: 3px;
@@ -12,4 +12,4 @@
   border-radius: 3px;
   background: linear-gradient(90deg, #c67700 0%, #fcff9e 100%);
   transition: width 0.1s;
-}
+} */
